--- a/dark.html
+++ b/dark.html
@@ -4,14 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="light.css" > 
-    <title> darktable</title>
+    <title> lighttable</title>
+    <style>
+      table,
+      td,
+      th{
+        border-color: white;
+        color: white;
+      }
+    </style>
 </head>
-<body style="    background-color: #f5f5f5;" >
-    <header style="background-color: white;" >
+<body style="background-color: #1b1b1b;" >
+    <header >
         <div id="div">
             <nav >
-<img src="D:\sylani mass it\tables\assests\logo.png" alt=""> <a href="dark.html"><h4 id="btn">Dark Mode</h4></a>
-</nav>
+<img src="D:\sylani mass it\tables\assests\logo.png" alt=""><a href="index.html"><h4 id="btn">Light Mode</h4>
+</a></nav>
 </div>
     </header>
 
